# inoob_web_forum

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  shell.nix
docker/: nginx.conf
src/: manage.py
src/authentication/: urls.py  views.py
src/authentication/templates/registration/: login.html  register.html
src/base/: urls.py  views.py
src/base/templates/base/: base.html  navbar.html
src/base/templates/registration/: login.html  register.html
src/discussion/: urls.py
src/discussion/migrations/: 0001_profiles.py  0002_questions.py  0003_answers.py  0004_replies.py  0005_vote_questions.py  0006_vote_answers.py  0007_categories.py  0008_tags.py  0009_saved.py  0010_add_content_replies.py
src/discussion/templates/base/: base_discussion.html
src/discussion/templates/discussion/: dashboard.html  my_qna.html  post_question.html  profile.html  saved.html
src/discussion/views/: dashboard_views.py  helper.py  my_qna_view.py  post_question_view.py  profile_view.py  saved_view.py
src/discussion/views/helpers/: date_to_time_ago.py
src/inoobwebforum/: asgi.py  settings.py  urls.py  wsgi.py
src/landing/: urls.py  views.py
src/landing/templates/landing/: index.html
